# DuanNhom10-48k22.2

./: .pdm-python  pyproject.toml  requirements.txt
accounts/: urls.py  views.py
products/: views.py
public/media/css/: bootstrap.css
templates/accounts/: cart.html  login.html  order_details.html  order_history.html  order_pdf_generate.html  register.html
templates/base/: base.html
templates/home/: contact.html  footer.html  index.html  navbar.html  search.html
templates/product/: product.html
templates/product_parts/: product_list.html
